--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
-certifi==2024.8.30
+branca==0.8.0
+certifi==2023.7.22
 cffi==1.17.1
 charset-normalizer==3.3.2
 comm==0.2.2
-contourpy==1.3.0
+contourpy==1.1.1
 cycler==0.12.1
+dacite==1.8.1
 debugpy==1.8.6
 decorator==5.1.1
 defusedxml==0.7.1
@@ -23,18 +25,23 @@ et-xmlfile==1.1.0
 executing==2.1.0
 fastapi==0.115.0
 fastjsonschema==2.20.0
-fonttools==4.54.1
+folium==0.17.0
+fonttools==4.43.1
 fqdn==1.5.1
 h11==0.14.0
+htmlmin==0.1.12
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.10
+ImageHash==4.3.1
+importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.27.0
 ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.3.2
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -51,26 +58,32 @@ jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
-kiwisolver==1.4.7
+kiwisolver==1.4.5
+llvmlite==0.43.0
 MarkupSafe==2.1.5
-matplotlib==3.9.2
+matplotlib==3.7.0
 matplotlib-inline==0.1.7
 mistune==3.0.2
+multimethod==1.10
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.1
 notebook==7.2.2
 notebook_shim==0.2.4
-numpy==2.1.1
-openpyxl==3.1.5
+numba==0.60.0
+numpy==1.23.5
+openpyxl==3.1.2
 overrides==7.7.0
 packaging==24.1
-pandas==2.2.3
+pandas==2.0.3
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==0.5.3
 pexpect==4.9.0
-pillow==10.4.0
+phik==0.12.3
+Pillow==10.0.1
 platformdirs==4.3.6
 prometheus_client==0.21.0
 prompt_toolkit==3.0.47
@@ -81,10 +94,11 @@ pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
-pyparsing==3.1.4
+pyparsing==3.1.1
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.2
+PyWavelets==1.4.1
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
@@ -92,25 +106,37 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
-seaborn==0.13.2
+scikit-learn==1.5.2
+scipy==1.11.3
+seaborn==0.12.2
 Send2Trash==1.8.3
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 starlette==0.38.6
+statsmodels==0.14.0
+sweetviz==2.2.1
+tangled-up-in-unicode==0.2.0
 terminado==0.18.1
+threadpoolctl==3.5.0
 tinycss2==1.3.0
 tornado==6.4.1
-tqdm==4.66.5
+tqdm==4.66.1
 traitlets==5.14.3
+typeguard==4.3.0
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
-tzdata==2024.2
+tzdata==2023.3
 uri-template==1.3.0
 urllib3==2.2.3
+visions==0.7.5
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.13
+wordcloud==1.9.3
+xyzservices==2024.9.0
+ydata==0.2
+ydata-profiling==4.10.0
