--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,22 @@ attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blinker==1.8.2
 branca==0.8.0
+cachelib==0.9.0
 certifi==2023.7.22
 cffi==1.17.1
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 contourpy==1.1.1
 cycler==0.12.1
 dacite==1.8.1
+dash==2.18.2
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.8.6
 decorator==5.1.1
 defusedxml==0.7.1
@@ -25,6 +33,8 @@ et-xmlfile==1.1.0
 executing==2.1.0
 fastapi==0.115.0
 fastjsonschema==2.20.0
+Flask==3.0.3
+Flask-Caching==2.3.0
 folium==0.17.0
 fonttools==4.43.1
 fqdn==1.5.1
@@ -34,11 +44,13 @@ httpcore==1.0.5
 httpx==0.27.2
 idna==3.10
 ImageHash==4.3.1
+importlib_metadata==8.5.0
 importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.27.0
 ipywidgets==8.1.5
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.3.2
@@ -85,6 +97,7 @@ pexpect==4.9.0
 phik==0.12.3
 Pillow==10.0.1
 platformdirs==4.3.6
+plotly==5.24.1
 prometheus_client==0.21.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
@@ -103,6 +116,7 @@ PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
+retrying==1.3.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
@@ -118,6 +132,7 @@ starlette==0.38.6
 statsmodels==0.14.0
 sweetviz==2.2.1
 tangled-up-in-unicode==0.2.0
+tenacity==9.0.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.3.0
@@ -135,8 +150,10 @@ wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.0.6
 widgetsnbextension==4.0.13
 wordcloud==1.9.3
 xyzservices==2024.9.0
 ydata==0.2
 ydata-profiling==4.10.0
+zipp==3.20.2
