--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ bleach==6.1.0
 blinker==1.8.2
 branca==0.8.0
 cachelib==0.9.0
+category-encoders==2.6.4
 certifi==2023.7.22
 cffi==1.17.1
 charset-normalizer==3.3.2
@@ -145,6 +146,7 @@ typing_extensions==4.12.2
 tzdata==2023.3
 uri-template==1.3.0
 urllib3==2.2.3
+uvicorn==0.32.0
 visions==0.7.5
 wcwidth==0.2.13
 webcolors==24.8.0
