--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ debugpy==1.8.6
 decorator==5.1.1
 defusedxml==0.7.1
 et-xmlfile==1.1.0
+exceptiongroup==1.2.2
 executing==2.1.0
 fastapi==0.115.0
 fastjsonschema==2.20.0
@@ -137,6 +138,7 @@ tenacity==9.0.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.3.0
+tomli==2.0.2
 tornado==6.4.1
 tqdm==4.66.1
 traitlets==5.14.3
