--- a/.github/workflows/sync_hf.yml
+++ b/.github/workflows/sync_hf.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
+      - name: Install Git LFS
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git-lfs
+          git lfs install
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
