--- a/.github/workflows/sync_hf.yml
+++ b/.github/workflows/sync_hf.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/jdalfonso/M2-SISE-ENEDIS main
+        run: git push https://jdalfonso:$HF_TOKEN@huggingface.co/spaces/jdalfonso/M2-SISE-ENEDIS main
