--- a/.github/workflows/sync_hf.yml
+++ b/.github/workflows/sync_hf.yml
@@ -14,7 +14,14 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
+      - name: Install Git LFS
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git-lfs
+          git lfs install
+      - name: Configure Git LFS
+        run: git config lfs.allowincompletepush true
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/jdalfonso/M2-SISE-ENEDIS main
+        run: git push https://jdalfonso:$HF_TOKEN@huggingface.co/spaces/jdalfonso/M2-SISE-ENEDIS main
